Remove erroneous spring configuration. Useless anyway.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,4 @@
-logging:
-    file: "logs/messages.log"
+---
 
- spring:
-     output:
-     ansi:
-         enabled: DETECT
+logging:
+  file: logs/messages.log
