Implement photo publishing from Telegram to IRC.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <camel.version>2.22.0</camel.version>
         <springboot.version>2.0.3.RELEASE</springboot.version>
+        <commonsio.version>2.6</commonsio.version>
+        <jackson.version>2.9.6</jackson.version>
     </properties>
 
     <dependencyManagement>
@@ -72,6 +74,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commonsio.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- testing -->
