--- a/src/main/resources/application-myconf.yml
+++ b/src/main/resources/application-myconf.yml
@@ -1,10 +1,15 @@
 ---
-
 irc:
   uri: "irc:iBridge@irc.nlnog.net:6668?nickname=iBridge&channels=#testing123,#testing666&realname=Just a test"
 
 telegram:
-  uri: "telegram:bots/numbers:numberAndLetters"
+  uri: "telegram:bots/numbers:numberAndLetters?delay=5s"
+
+publish:
+  url: "https://example.comn/telegram-photos"
+
+local:
+  file-path: "/var/www/htdocs/example.com/telegram-photos"
 
 channel-group-mappings:
   channels:
